@@ -1,5 +1,6 @@
 === ongoing ===
 
+- Added cms plugin for events
 
 === 0.6.2 ===
 
